# juniper

./: .gitignore  README.md  exported.json
lean/: JuniperLean.lean  README.md  lake-manifest.json  lakefile.toml
lean/JuniperLean/: Basic.lean  JuniperJson.lean
rs/: Cargo.toml  README.md  explanation.txt
rs/juniper-rs/: Cargo.toml
rs/juniper-rs/src/: from_lean.rs  main.rs
rs/juniper_bin/: Cargo.toml
rs/juniper_bin/src/: from_lean.rs  main.rs
rs/juniper_lean_to_rewrite/: Cargo.toml
rs/juniper_lean_to_rewrite/src/: lib.rs  test.json
rs/juniper_lib/: Cargo.toml  build.rs
rs/juniper_lib/src/: lib.rs
rs/juniper_math_expression/: Cargo.toml
rs/juniper_math_expression/src/: approximate.rs  constant_fold.rs  juniper_big_rational.rs  lib.rs  math_expression.rs
rs/juniper_repl/: Cargo.toml
rs/juniper_repl/src/: main.rs
rs/lean-parse/: Cargo.toml
rs/lean-parse/src/: lean_expr.rs  lib.rs
rs/lean_parse/: Cargo.toml
rs/lean_parse/src/: lean_expr.rs  lib.rs
rs/src/: lean_expr.rs  main.rs
rs/test_assets/: add_zero.json  cos_pi_div_four.json  inv_neg.json  mul_comm.json  mul_inv_cancel.json  neg_add_cancel.json
