[package]
name = "juniper_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
egg = "0.10.0"
num = "0.4.3"
lean_parse = { path = "../lean_parse" }
juniper_math_expression = { path = "../juniper_math_expression" }
juniper_lean_to_rewrite = { path = "../juniper_lean_to_rewrite/" }
serde_json = "1.0.135"
